--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -1,8 +1,12 @@
 name: Keep Render Awake
 
 on:
+  push:
+    branches: ["main"]   # TEMPORARY
   schedule:
-    - cron: "*/5 * * * *"   # every 5 minutes
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
+
 
 jobs:
   ping:
